// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtnClearBoard renders button clear board 1`] = `
<button
  onClick={[MockFunction]}
  type="button"
>
  Остановить
</button>
`;

exports[`BtnClearBoard renders button clear board 2`] = `
<button
  onClick={[MockFunction]}
  type="button"
>
  Начать
</button>
`;
